<resources>
    <string name="app_name">Calculator Max</string>
    <string name="strTextoInicialResultado">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnPor">×</string>
    <string name="btnDividido">÷</string>
    <string name="btnIgual">=</string>
    <string name="strOperacionMas">%1$s+</string>
    <string name="strOperacionMenos">%1$s-</string>
    <string name="strOperacionPor">%1$s×</string>
    <string name="strOperacionDividido">%1$s÷</string>
    <string name="strOperacionIgual">%1$s=</string>
    <string name="btnLimpiar">CE</string>
</resources>
